--- a/wp-image-carousel-plugin.css
+++ b/wp-image-carousel-plugin.css
@@ -69,3 +69,26 @@
 } #wp-img-carousel-right-arrow span:hover {
   color:rgba(255,255,255,.8);
 }
+
+#wp-img-carousel-dots-container {
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 90%;
+} 
+.wp-img-carousel-dot {
+  margin-left: 5px;
+  margin-right: 5px;
+  display: inline-block;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: rgba(255,255,255,.3);
+} .wp-img-carousel-dot:hover {
+  cursor: pointer;
+}
+.wp-img-carousel-dot-active {
+  background-color:rgba(255,255,255,.8) !important;
+}
