--- a/wp-image-carousel-plugin.css
+++ b/wp-image-carousel-plugin.css
@@ -25,7 +25,7 @@
   opacity: 0;
 }
 
-#wp-img-carousel-left-arrow {
+.wp-img-carousel-left-arrow {
   position: absolute;
   left: 0;
   top: 50%;
@@ -35,19 +35,19 @@
   transform: translateY(-50%);
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-} #wp-img-carousel-left-arrow:hover {
+} .wp-img-carousel-left-arrow:hover {
   cursor: pointer;
   background-color: rgba(0,0,0,.2);
-} #wp-img-carousel-left-arrow span {
+} .wp-img-carousel-left-arrow span {
   font-size: 46px;
   color: rgba(255,255,255,.3);
   position: absolute;
   transform: translateY(50%);
-} #wp-img-carousel-left-arrow span:hover {
+} .wp-img-carousel-left-arrow span:hover {
   color: rgba(255,255,255,.8);
 }
 
-#wp-img-carousel-right-arrow {
+.wp-img-carousel-right-arrow {
   position: absolute;
   right: 0;
   top: 50%;
@@ -57,19 +57,19 @@
   transform: translateY(-50%);
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-} #wp-img-carousel-right-arrow:hover {
+} .wp-img-carousel-right-arrow:hover {
   cursor: pointer;
   background-color: rgba(0,0,0,.2);
-} #wp-img-carousel-right-arrow span {
+} .wp-img-carousel-right-arrow span {
   font-size: 46px;
   color: rgba(255,255,255,.3);
   position: absolute;
   transform: translate(8px,50%);
-} #wp-img-carousel-right-arrow span:hover {
+} .wp-img-carousel-right-arrow span:hover {
   color:rgba(255,255,255,.8);
 }
 
-#wp-img-carousel-dots-container {
+.wp-img-carousel-dots-container {
   text-align: center;
   position: absolute;
   bottom: 0px;
@@ -90,4 +90,11 @@
 }
 .wp-img-carousel-dot-active {
   background-color:rgba(255,255,255,.8) !important;
+}
+
+.wp-img-carousel-img-urls {
+  display: none;
+}
+.wp-img-carousel-img-captions {
+  display: none;
 }
